--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Jekflix | A theme for Jekyll
 email: youremail@xyz.com
 description: Some text about your blog.
-baseurl: "/new" # the subpath of your site, e.g. /blog
+baseurl: "/Blog" # the subpath of your site, e.g. /Blog
 google_analytics: "UA-XXXXXXXX-X"
 
 # User Settings
